a slide on parameters has been added

--- a/algosbcourse.tex
+++ b/algosbcourse.tex
@@ -33,6 +33,7 @@
 \include{radius}
 \include{alpha}
 \include{somtrained}
+\include{parameters}
 \include{umatrix}
 \include{umatrixmoon}
 \include{flooding}
