highlight some words

--- a/getthecode.tex
+++ b/getthecode.tex
@@ -5,7 +5,7 @@
     \href{https://github.com/bougui505/SOM/tree/dev}{https://github.com/bougui505/SOM/tree/dev}\\
     And can be downloaded as a zip archive.
 
-    It's written in python and need numpy and scipy libraries.
+    It's written in \textbf{python} and need \textbf{numpy} and \textbf{scipy} libraries.
 
     Let's take a look on the code on Github.
 \end{frame}
