--- a/algosbcourse.tex
+++ b/algosbcourse.tex
@@ -38,6 +38,10 @@
 \include{umatrixmoon}
 \include{flooding}
 \include{clustering}
+\section{Application to protein conformation clustering}
+\include{inputVectors_for_MD}
+\include{pca_distance_matrix_how_many_PCs}
+\include{protein_conformation_descriptor}
 \section{How to do in practice?}
 \include{getthecode}
 \end{document}
