data added on VanA

--- a/algosbcourse.tex
+++ b/algosbcourse.tex
@@ -42,6 +42,8 @@
 \include{inputVectors_for_MD}
 \include{pca_distance_matrix_how_many_PCs}
 \include{protein_conformation_descriptor}
+\include{vanAexample}
+\include{vanAMD}
 \section{How to do in practice?}
 \include{getthecode}
 \end{document}
