--- a/pca_distance_matrix_how_many_PCs.tex
+++ b/pca_distance_matrix_how_many_PCs.tex
@@ -2,15 +2,15 @@
 \frametitle{How many PCs to describe a distance matrix?}
 \begin{columns}
 \begin{column}{.33\textwidth}
-\includegraphics[width=\textwidth]{figures/distance_matrix_1PC-crop.pdf}\\
-\includegraphics[width=\textwidth]{figures/distance_matrix_2PC-crop.pdf}
+\includegraphics[width=\textwidth]{figures/distance_matrix_1PC-crop.png}\\
+\includegraphics[width=\textwidth]{figures/distance_matrix_2PC-crop.png}
 \end{column}
 \begin{column}{.33\textwidth}
-\includegraphics[width=\textwidth]{figures/distance_matrix_3PC-crop.pdf}\\
-\includegraphics[width=\textwidth]{figures/distance_matrix_4PC-crop.pdf}
+\includegraphics[width=\textwidth]{figures/distance_matrix_3PC-crop.png}\\
+\includegraphics[width=\textwidth]{figures/distance_matrix_4PC-crop.png}
 \end{column}
 \begin{column}{.33\textwidth}
-\includegraphics[width=\textwidth]{figures/distance_matrix-crop.pdf}\\
+\includegraphics[width=\textwidth]{figures/distance_matrix-crop.png}\\
 Matrix reconstruction of the original matrix above with 1, 2, 3 and 4 PCS.
 \end{column}
 \end{columns}
