Results on VanA added

--- a/algosbcourse.tex
+++ b/algosbcourse.tex
@@ -44,6 +44,7 @@
 \include{protein_conformation_descriptor}
 \include{vanAexample}
 \include{vanAMD}
+\include{VanASOM}
 \section{How to do in practice?}
 \include{getthecode}
 \end{document}
