MMGBSA plot added for VanA

--- a/algosbcourse.tex
+++ b/algosbcourse.tex
@@ -53,6 +53,7 @@
 \include{vanAexample}
 \include{vanAMD}
 \include{VanASOM}
+\include{VanASOMegb}
 \section{How to do in practice?}
 \include{getthecode}
 \include{readtrajectory}
