intro to protein clustering added and team added for the title page

--- a/algosbcourse.tex
+++ b/algosbcourse.tex
@@ -22,7 +22,7 @@
  \end{frame}
 }
 \title{Clustering protein conformations using SOM}
-\author{Guillaume Bouvier}
+\author{Guillaume Bouvier\\Bioinformatique Structurale Team\\Institut Pasteur, Paris}
 \date{November 28, 2013}
 
 %\includeonly{piluspathmovie}
@@ -50,6 +50,7 @@
 \include{flooding}
 \include{clustering}
 \section{Application to protein conformation clustering}
+\include{sombasics}
 \include{inputVectors_for_MD}
 \include{pca_distance_matrix_how_many_PCs}
 \include{protein_conformation_descriptor}
