chainlink benchmark added

--- a/algosbcourse.tex
+++ b/algosbcourse.tex
@@ -49,6 +49,7 @@
 \include{umatrixmoon}
 \include{flooding}
 \include{clustering}
+\include{benchmark}
 \section{Application to protein conformation clustering}
 \include{sombasics}
 \include{inputVectors_for_MD}
